lib/libui/bottom_pane/snapshots/chaos_console__bottom_pane__request_user_input__tests__request_user_input_freeform.snap
---
source: bin/console/src/bottom_pane/request_user_input.rs
expression: "render_snapshot(&overlay, area)"
---
                                                                                                                        
  Question 1/1 (1 unanswered)                                                                                           
  Share details.                                                                                                        
                                                                                                                        
  › Type your answer (optional)                                                                                         
                                                                                                                        
                                                                                                                        
                                                                                                                        
  enter to submit answer | esc to interrupt
